<resources>
    <string name="app_name">NYT Search</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="begin_date">Begin date...</string>
    <string name="end_date">End date...</string>
    <string name="date_title">Enter Date Range</string>
    <string name="sort_order">Sort:</string>
    <string name="apply_filter">Apply</string>
    <string name="news_desk">Select News Desk Filters:</string>
    <string name="sports">Sports</string>
    <string name="arts">Arts</string>
    <string name="fashion_and_style"><![CDATA[Fashion & Style]]></string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="new_to_old">Newest to Oldest</string>
    <string name="old_to_new">Oldest to Newest</string>
</resources>
